[package]
name = "autonexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rdev = "0.5.3"
screenshots = "0.8.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
